--- a/resources/views/layouts/_includes/dashboard/nave.edge
+++ b/resources/views/layouts/_includes/dashboard/nave.edge
@@ -687,10 +687,10 @@
                     </li>
                     <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
 							<i class="flaticon-381-television"></i>
-							<span class="nav-text">Apps</span>
+							<span class="nav-text">Empregos</span>
 						</a>
                         <ul aria-expanded="false">
-                            <li><a href="/dashboard/app-profile.html">Profile</a></li>
+                            <li><a href="/dashboard/app-profile.html">Listar Empregos</a></li>
                             <li><a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
                                 <ul aria-expanded="false">
                                     <li><a href="/dashboard/email-compose.html">Compose</a></li>
@@ -714,7 +714,7 @@
                     </li>
                     <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
 							<i class="flaticon-381-controls-3"></i>
-							<span class="nav-text">Charts</span>
+							<span class="nav-text">Aplicativos</span>
 						</a>
                         <ul aria-expanded="false">
                             <li><a href="/dashboard/chart-flot.html">Flot</a></li>
@@ -727,92 +727,25 @@
                     </li>
                     <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
 							<i class="flaticon-381-internet"></i>
-							<span class="nav-text">Bootstrap</span>
+							<span class="nav-text">Utilizadores</span>
 						</a>
                         <ul aria-expanded="false">
-                            <li><a href="/dashboard/ui-accordion.html">Accordion</a></li>
-                            <li><a href="/dashboard/ui-alert.html">Alert</a></li>
-                            <li><a href="/dashboard/ui-badge.html">Badge</a></li>
-                            <li><a href="/dashboard/ui-button.html">Button</a></li>
-                            <li><a href="/dashboard/ui-modal.html">Modal</a></li>
-                            <li><a href="/dashboard/ui-button-group.html">Button Group</a></li>
-                            <li><a href="/dashboard/ui-list-group.html">List Group</a></li>
-                            <li><a href="/dashboard/ui-media-object.html">Media Object</a></li>
-                            <li><a href="/dashboard/ui-card.html">Cards</a></li>
-                            <li><a href="/dashboard/ui-carousel.html">Carousel</a></li>
-                            <li><a href="/dashboard/ui-dropdown.html">Dropdown</a></li>
-                            <li><a href="/dashboard/ui-popover.html">Popover</a></li>
-                            <li><a href="/dashboard/ui-progressbar.html">Progressbar</a></li>
-                            <li><a href="/dashboard/ui-tab.html">Tab</a></li>
-                            <li><a href="/dashboard/ui-typography.html">Typography</a></li>
-                            <li><a href="/dashboard/ui-pagination.html">Pagination</a></li>
-                            <li><a href="/dashboard/ui-grid.html">Grid</a></li>
+                            <li><a href="{{ route('users.index') }}">Cadastrar Utilizadores</a></li>
+                            <li><a href="/dashboard/ui-alert.html">Listar Utilizadores</a></li>
+                       
+                          
+                           
 
                         </ul>
                     </li>
-                    <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-							<i class="flaticon-381-heart"></i>
-							<span class="nav-text">Plugins</span>
-						</a>
-                        <ul aria-expanded="false">
-                            <li><a href="/dashboard/uc-select2.html">Select 2</a></li>
-                            <li><a href="/dashboard/uc-nestable.html">Nestedable</a></li>
-                            <li><a href="/dashboard/uc-noui-slider.html">Noui Slider</a></li>
-                            <li><a href="/dashboard/uc-sweetalert.html">Sweet Alert</a></li>
-                            <li><a href="/dashboard/uc-toastr.html">Toastr</a></li>
-                            <li><a href="/dashboard/map-jqvmap.html">Jqv Map</a></li>
-                            <li><a href="/dashboard/uc-lightgallery.html">Light Gallery</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="widget-basic.html" class="ai-icon" aria-expanded="false">
-							<i class="flaticon-381-settings-2"></i>
-							<span class="nav-text">Widget</span>
-						</a>
-					</li>
-                    <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-							<i class="flaticon-381-notepad"></i>
-							<span class="nav-text">Forms</span>
-						</a>
-                        <ul aria-expanded="false">
-                            <li><a href="/dashboard/form-element.html">Form Elements</a></li>
-                            <li><a href="/dashboard/form-wizard.html">Wizard</a></li>
-                            <li><a href="/dashboard/form-editor-summernote.html">Summernote</a></li>
-                            <li><a href="form-pickers.html">Pickers</a></li>
-                            <li><a href="form-validation-jquery.html">Jquery Validate</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-							<i class="flaticon-381-network"></i>
-							<span class="nav-text">Table</span>
-						</a>
-                        <ul aria-expanded="false">
-                            <li><a href="table-bootstrap-basic.html">Bootstrap</a></li>
-                            <li><a href="table-datatable-basic.html">Datatable</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-menu"><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-							<i class="flaticon-381-layer-1"></i>
-							<span class="nav-text">Pages</span>
-						</a>
-                        <ul aria-expanded="false">
-                            <li><a href="/dashboard/page-register.html">Register</a></li>
-                            <li><a href="/dashboard/page-login.html">Login</a></li>
-                            <li><a class="has-arrow" href="javascript:void()" aria-expanded="false">Error</a>
-                                <ul aria-expanded="false">
-                                    <li><a href="/dashboard/page-error-400.html">Error 400</a></li>
-                                    <li><a href="/dashboard/page-error-403.html">Error 403</a></li>
-                                    <li><a href="/dashboard/page-error-404.html">Error 404</a></li>
-                                    <li><a href="/dashboard/page-error-500.html">Error 500</a></li>
-                                    <li><a href="/dashboard/page-error-503.html">Error 503</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="/dashboard/page-lock-screen.html">Lock Screen</a></li>
-                        </ul>
-                    </li>
+                    
+               
+                   
+              
                 </ul>
 				
 				<div class="copyright">
-					<p><strong>Jobie Dashboard</strong> © 2022 All Rights Reserved</p>
+					<p><strong>Vicent Software Dashboard</strong> © 2022 All Rights Reserved</p>
 					<p>by DexignZone</p>
 				</div>
 			</div>
